fix align desc

--- a/client_v2/src/scss/_output.scss
+++ b/client_v2/src/scss/_output.scss
@@ -204,6 +204,11 @@
         margin: auto 0;
         flex-direction: row;
         display: flex;
+
+        .dd-desc {
+            flex-direction: row;
+            display: flex;
+        }
     }
 
 
